# sisclinic-backend

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: controllers.py  cruds.py  database.py  main.py  models.py  schemas.py  security.py  services.py
app/admin/: controllers.py  cruds.py  routes.py  schemas.py  services.py
app/config/: models.py
app/users/: controllers.py  cruds.py  routes.py  schemas.py  security.py
migrations/: env.py
migrations/versions/: 0d21e1fca755_.py  21fd0e6a4289_.py  236abaaff03e_.py  2a987e8fec16_.py  33d4f7713013_.py  3ec2a0100422_.py  4c6ee5442648_.py  61a4634bea34_.py  6aee6fa74340_.py  9bb652bb3565_.py  b6fd2ec65b85_.py  b96ea23a133a_.py  bed211e5a434_.py  cac75fcf46c7_.py  cb0b347e0981_.py  cb919915017d_.py  cde7a53e5701_.py  d6572bcbb6e0_.py  eaf6fe70f386_.py  f1c73afe70ce_.py  f38fcaceb733_.py  f4d99521c7c3_.py  f5d172db962c_.py
sisclinic/: main.py
sisclinic/api/v1/routes/: user_routes.py
sisclinic/db/: database.py
sisclinic/models/: models.py
sisclinic/schemas/: UserSchemas.py
sisclinic/utils/services/: segurity.py
tests/: conftest.py  test_main.py
